--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="col-sm-4">&copy; 2016 Skillfair</p>
     <ul class="col-sm-8">
      <li class="col-sm-1">
-       <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg">
+       <img src="uglyyg.jpg">
      </li>
      <li class="col-sm-1">
        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg">
