--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <figure class="col-sm-6">
         <p>kitchen</p>
-        <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg"/>
+        <img src=""uglyyg.jpg""/>
       </figure>
       <figure class="col-sm-6">
         <p>woodwork</p>
