--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <figure class="col-sm-6">
         <p>kitchen</p>
-        <img src=""uglyyg.jpg""/>
+        <img src="uglyyg.jpg"/>
       </figure>
       <figure class="col-sm-6">
         <p>woodwork</p>
