--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="row"> 
       <figure class="col-sm-6">
         <p>kartrider</p>
-        <img src="karrider.jpg"/>
+        <img src="kartrider.jpg"/>
       </figure>
       <figure class="col-sm-6">
         <p>travel</p>
